[package]
name = "hwi_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nvml-wrapper = "0.9.0"
raw-cpuid = "10.6.1"
itertools = "0.10.5"

egui = "0.21.0"
eframe = "0.21.3"

serde = {version = "1.0.152", features = ["derive"] }
toml = "0.7.1"
lazy_static = "1.4.0"

[build-dependencies]
git2 = "0.16.1"